# haskellbook

./: README.md
Chp10/: .Exercises.hs.swp  DBProcessing.hs  Exercises.hs
chp1/: exercises.txt
chp10/: DBProcessing.hs  Exercises.hs
chp11/: .Exercises.hs.swp  Exercises.hs  chp11.cabal
chp11/app/: Main.hs
chp11/src/: Jammin.hs
chp12/: chp12.cabal
chp12/app/: Main.hs
chp12/src/: Exercises.hs  Main.hs
chp13/: LICENSE  README.md  chp13.cabal  hangman.cabal
chp13/app/: Main.hs
chp13/lib/: DogsRule.hs  Hello.hs
chp13/src/: Hello.hs
chp14/: README.md  chp14.cabal  package.yaml.old  temp.txt
chp14/.stack-work/install/x86_64-osx/lts-8.17/8.0.2/flag-cache/: chp14-0.1.0.0
chp14/.stack-work/install/x86_64-osx/lts-8.24/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-Jyj4gc4JxkEIgGFLAsGhs9  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  ghc-paths-0.1.0.9-AhaDlGOsRAepox069XzG  haskeline-0.7.4.0-DeCMMzb9PSJC3zwcMXMk7s  hspec-2.4.3-1FDnT5qa4j3Kk2ZAmhP9xh  hspec-core-2.4.3-4aSW6vl2zjIEbOOJG9KdQp  hspec-discover-2.4.3-CG2f3yt4qi61oj48M1aJup  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  intero-0.1.20  primitive-0.6.1.0-6AbSTw9JXz141LE5p6LGH  quickcheck-io-0.1.4-C5t3MfRsr5zrFam5nRAFy  random-1.1-9tceXaeYIMZ4JrKq20Egog  setenv-0.1.1.3-8dEhk6JWvlmCmVyBammSpu  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  syb-0.6-IcoSwlPi2Nx4zSqMmorFPS  terminfo-0.4.1.0-FNScbjwxa2Y3p4e5RvG3l  tf-random-0.5-BGjMgO8m67W8CHiEl15kZ7
chp14/src/: Main.hs
chp15/: README.md  chp15.cabal
chp15/src/: Main.hs
chp6/: Exercises.hs
chp7/: Exercises.hs
chp8/: Exercises.hs  WordNumber.hs
chp9/: Cipher.hs  Exercises.hs
morse/: morse.cabal
morse/app/: Main.hs
morse/src/: Morse.hs
morse/test/: Spec.hs
