name:                chp12
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/pnaranja/chp12#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Naranja
maintainer:          paul.naranja@gmail.com
copyright:           Copyright: (c) 2016 Paul Naranja
category:            Projects
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable chp12
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
