name:                chp13
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pnaranja/chp13#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Naranja
maintainer:          paul.naranja@gmail.com
copyright:           Copyright: (c) 2016 Paul Naranja
category:            Projects
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable chp13
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , chp13

library
  hs-source-dirs:      src
  exposed-modules:     Hello
                     , DogsRule
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5


